--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="style.css" href="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
