--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            <img src="https://learn.logikaschool.com/https://learn.logikaschool.com/https://learn.logikaschool.com/https://learn.logikaschool.com//uploads/2020/12/header_0_1609082687.svg">
+            <img src="https://drive.google.com/uc?export=view&id=13eM5zB8jvzulYJpnmW_hG2r1qzKpPxSV">
             <nav>
             <a href="">Розклад</a>
             <a href="">Про заняття</a>
@@ -13,9 +13,9 @@
             <h1>Болдерінг</h1>
         </header>
         <main>
-            <img src="https://learn.logikaschool.com/https://learn.logikaschool.com/https://learn.logikaschool.com//uploads/2020/12/image1_0_1609082687.png">
-            <img src="https://learn.logikaschool.com/https://learn.logikaschool.com//uploads/2020/12/image2_0_1609082687.png">
-            <img src="https://learn.logikaschool.com//uploads/2020/12/image3_0_1609082687.png"><br><br><br>
+            <img src="https://drive.google.com/uc?export=view&id=19yIxR7SbU1eYiL6tag8eM6bxS68gwyq3">
+            <img src="https://drive.google.com/uc?export=view&id=1IoG99yvgYISqIfOzLEqPSexywfNNmfOd">
+            <img src="https://drive.google.com/uc?export=view&id=1auJ8pfhgJqzgdxNn_M3_ob0W7utbvoqk"><br><br><br>
             <p>Ніколи не були на скелі? — Швидше, зробіть першу спробу залізти нагору! На наших майданчиках зали різної складності. Тренування безпечні, для новачків передбачено автострахування, у залах працюють інструктори. Для дітей виділені зони із захоплюючими атракціонами. Є абонемент, знижки та система індивідуальних занять. Перед відвідуванням, будь ласка, ознайомтесь із правилами техніки безпеки.</p>
         </main>
             <footer>
