--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1>Болдерінг</h1>
         </header>
         <main>
-            <img src="https://drive.google.com/uc?export=view&id=19yIxR7SbU1eYiL6tag8eM6bxS68gwyq3">
-            <img src="https://drive.google.com/uc?export=view&id=1IoG99yvgYISqIfOzLEqPSexywfNNmfOd">
-            <img src="https://drive.google.com/uc?export=view&id=1auJ8pfhgJqzgdxNn_M3_ob0W7utbvoqk"><br><br><br>
+            <img src="https://drive.google.com/uc?export=view&id=19yIxR7SbU1eYiL6tag8eM6bxS68gwyq3"
+            <img src="https://drive.google.com/uc?export=view&id=1IoG99yvgYISqIfOzLEqPSexywfNNmfOd"
+            <img src="https://drive.google.com/uc?export=view&id=1auJ8pfhgJqzgdxNn_M3_ob0W7utbvoqk"<br><br><br>
             <p>Ніколи не були на скелі? — Швидше, зробіть першу спробу залізти нагору! На наших майданчиках зали різної складності. Тренування безпечні, для новачків передбачено автострахування, у залах працюють інструктори. Для дітей виділені зони із захоплюючими атракціонами. Є абонемент, знижки та система індивідуальних занять. Перед відвідуванням, будь ласка, ознайомтесь із правилами техніки безпеки.</p>
         </main>
             <footer>
